--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
         </div>
     </section>
 	
-	<footer class="f#oter">
+	<footer class="footer">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-12 wow fadeInDown" data-wow-delay="1s">
